bugfix footer dark mode

--- a/css/darkmode.css
+++ b/css/darkmode.css
@@ -65,3 +65,11 @@ a:hover{
     border: 1px solid white;
     border-radius: 8px;
 }
+
+.footer{
+    position: absolute;
+    bottom: 0;
+    background-color: rgb(2, 7, 53);
+    width: 98%;
+    height: 10vh;
+}
